Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -109,7 +109,7 @@ Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA,
 
 \subsection{(Archaic) Interbreeding, genomic consequences and why is it interesting}\label{(Archaic) Interbreeding, genomic consequences and why is it interesting}
 
-In recent years, the sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} revealed that modern humans outside of Africa were in contact and interbred with other hominin populations \citep{vernot_resurrecting_2014,fu_genome_2014,fu_early_2015,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. On a genomic level, the interbreeding with a migrant population (admixture) introduces divergent chromosomes into the mixing population. Over time, meiotic recombination progressively breaks these divergent chromosomes down into admixture segments, whose size decrease with time \citep{falush_inference_2003}. Assuming that recombination events are independent from eachother, the length distribution of the admixture segments is roughly inversely proportional to the number of generations since the interbreeding happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to infer the time of an
+In recent years, the sequencing and comparison of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} to modern human genomes revealed that modern humans outside of Africa were in contact and interbred with these other hominin populations \citep{vernot_resurrecting_2014,fu_genome_2014,fu_early_2015,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. On a genomic level, the interbreeding with a migrant population (admixture) introduces divergent chromosomes into the mixing population. Over time, meiotic recombination progressively breaks these divergent chromosomes down into admixture segments, whose size decrease with time \citep{falush_inference_2003}. Assuming that recombination events are independent from eachother, the length distribution of the admixture segments is roughly inversely proportional to the number of generations since the interbreeding happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to infer the time of an
 admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}. \citep{pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans , i.e. the time between start and end of sympatry of Neandertals and modern humans outside of Africa. This could give a clue to the debated questions of the time of the first modern humans leaving Africa and the extinction of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested around 37 kya inferred by radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017} and 39 kya from radiocarbon dates of Neandertal sites across Europa \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture could unveil more evidence of the timing and especially duration of this interaction. 
 
 \subsection{Admixture models}\label{Admixture models}
@@ -120,26 +120,30 @@ The accuracy and information content of admixture date estimates depend on the m
 \subsection{The two approaches and their application to find archaic admixture dates}\label{the-two-approaches-and-their-application-to-find-archaic-admixture-dates}
 
 The first step in dating admixture events from genetic data is therefore estimating the length distribution of admixture segments.  There are two main approaches for this; a first approach is to use patterns of linkage along a chromosome to estimate the length distribution, without explicitly inferring the genomic location of these segments. In contrast, a second set of methods first aims to identify all admixture segments over a certain length, and then use these segments for inference. 
-(\citep{chimusa_dating_2018}) (Figure \ref{fig:fig1} A).
+(\citep{chimusa_dating_2018}) (Figure \ref{fig:fig1} B).
 
 The first approach uses the admixture-induced linkage disequilibrium (ALD) decay. Variants on introgressed archaic segments are expected to be in high linkage disequilibrium to each other at the time of admixture \citep{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}. The extent of linkage between introgressed variants decreases over generations. Hence, in case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances
 \citep{patterson_methods_2004} and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from the ancestral population as well as LD caused by bottlenecks and genetic drift after the split of the populations \citep{moorjani_history_2011,sankararaman_date_2012}. For ancient admixture events however, ALD is quite similar to the genomic background \citep{sankararaman_date_2012}. To circumvent this issue for dating the Neandertal-human admixture time, an ascertainment scheme was used to calculate LD only for markers that are nearly differentially fixed between the two taxa. In this case, the presence of apparent Neandertal alleles in close-range LD is a signature of a locally introgressed locus
-\citep{sankararaman_date_2012}. Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameters are informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to be  between 37,000--86,000 ya (years ago) \citep{sankararaman_date_2012}. Later, this date was refined to 40,510--54,454 ya (95\% CI) using a different ascertainment scheme combined with a different genetic map \citep{moorjani_genetic_2016}. A date was also obtained from an ancient genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the ancient individual, by the decay of pairwise covariance between
+\citep{sankararaman_date_2012}. Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameters are informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. 
+
+Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to be  between 37,000--86,000 ya (years ago) \citep{sankararaman_date_2012}. Later, this date was refined to 40,510--54,454 ya (95\% CI) using a different ascertainment scheme combined with a different genetic map \citep{moorjani_genetic_2016}. A date was also obtained from an ancient genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the ancient individual, by the decay of pairwise covariance between
 introgressed SNPs, to the specimens radiocarbon date \citep{fu_genome_2014}.
 
-Using the second set of approaches, a more recent interbreeding event around 37 - 42 kya from an early modern human remain found in Romania with a recent Neandertal ancestor not more than 200 years ago, was found \citep{fu_early_2015}. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential distribution.
+Using the second set of approaches, it was found that the amount of Neandertal ancestry is higher in present-day East-Asians compared to Europeans. A second admixture event private to East-Asians around the same time as the interbreeding event between Neandertals and all non-Africans is suggested to explain the higher amount of ancestry \citep{kim_selection_2015,vernot_complex_2015}. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential distribution.
+
+The identification of long admixture segments from a genome of an early modern human found in Romania with a recent Neandertal ancestor not more than 200 years ago, hints to a more recent interbreeding event around 37 - 42 kya \citep{fu_early_2015}.
+
 
 The Denisovan modern human admixture time point was estimated to lie in the interval between 44,000--54,000 ya using the ALD
 approach on modern day genomes \citep{sankararaman_combined_2016}. 
 Direct inference of archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}. 
 Comparing the mean length of the formerly known and newly identified Denisovan segments did, however, not reveal significant differences, suggesting a lack of power to distinguish the
-two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovans, one in line with previous estimates at 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to
-be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}.
+two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovans, one in line with previous estimates at 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}. Together, these findings indicate that there were multiple interbreeding events over time between modern human and Archaic populations.
 
 
 \subsection{Why can't we us the pulse model}\label{Why can't we us the pulse model}
 
-While convenient for inference, one cannot use the admixture pulse model to distinguish an extend period of admixture from an admixture pulse \citep{pickrell_toward_2014}. Here, we are chiefly interested in the duration of the interbreeding between Neandertals and modern humans, especially in the start and end point.  Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated. Therefore, we introduce the \textit{extended admixture pulse} model, allowing for multigeneration continuous admixture. 
+While convenient for inference, one cannot use the admixture pulse model to distinguish an extend period of admixture from an admixture pulse \citep{pickrell_toward_2014}. Here, we are chiefly interested in the duration of the interbreeding between Neandertals and modern humans, especially in the start and end point.  Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated. Therefore, we introduce the \textit{extended admixture pulse} model, allowing for multigeneration continuous admixture (Figure \ref{fig:fig1} A). 
 
 \subsection{Previous attempts of a general admixture model and ours}\label{Previous attempts of a general admixture model and ours}
 
@@ -147,7 +151,7 @@ The extended pulse model is a generalization of the simple admixture pulse model
 \citep{zhou_modeling_2017,zhou_inference_2017}. 
 
 Here we use a simpler model of continuous admixture with just two parameters, and one less than the two-pulse model of Pickrell et al. 2014 \citep{pickrell_ancient_2014}. One parameter reflects the mean admixture time, and the other the duration of the admixture event; letting this parameter go to zero thus recovers the (nested) simple pulse model. 
-This model is particularly simple if we assume that migration rate over time is Gamma distributed, in which case the distribution of admixture segment lengths has a closed form (Figure \ref{fig:fig1} B & C).
+This model is particularly simple if we assume that migration rate over time is Gamma distributed, in which case the distribution of admixture segment lengths has a closed form (Figure \ref{fig:fig1} C & D).
 
 Nevertheless, this is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008}. Thus, we have to carefully evaluate potential sources of biases known from previous studies, namely the demography of the admixed population, the accuracy of the recombination map and the ascertainment scheme \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}.
 We compare the extended pulse with the simple pulse model, to examine the implications of the one-generation assumption in relation to the aforementioned potential biases. We test when the simple pulse model can be contrasted for the more general model of an extended admixture pulse.
@@ -177,10 +181,10 @@ decay under the extended pulse model.}
 
 We conducted simulations to assess the effect of continuous
 admixture compared to a pulse under ideal circumstances. 
-We also evaluate the impact of different recombination and demographic scenarios and the effect of different analysis parameters for estimates under an instantaneous pulse model.
+We also evaluated the impact of different recombination and demographic scenarios and the effect of different analysis parameters for estimates under an instantaneous pulse model.
 After assessing these effects we evaluated the possible
 parameter range for using the extended pulse model on ALD data,
-enabling to obtain a duration of continuous admixture. We used both admixture models on real data. We fitted several admixture scenarios with different durations to ALD data from the 1000 Genomes Project \citep{the_1000_genomes_project_consortium_global_2015} with 3 high coverage Neandertals \citep{prufer_complete_2013,prufer_high-coverage_2017,mafessoni_high_coverage_2020}.
+enabling to obtain a duration of continuous admixture. We use both admixture models on real data. We fitted several admixture scenarios with different durations to ALD data from the 1000 Genomes Project \citep{the_1000_genomes_project_consortium_global_2015} with 3 high coverage Neandertals \citep{prufer_complete_2013,prufer_high-coverage_2017,mafessoni_high_coverage_2020}.
 
 \subsection{Simulations}\label{simulations}
 
@@ -206,9 +210,123 @@ generations ago. The migration rate from Neandertals into non-Africans
 was set to zero before the split from Africans, to ensure no Neandertal
 ancestry in Africans. Each simulation was repeated 100 times. 
 
-\subsubsection{Admixture Models}\label{admixture models}
+\subsection{Admixture Models}\label{admixture models}
+
+In this section we want to define the admixture model in terms of its segment-length distribution $l$ for a random variable $T$ giving the admixture time $t_{admix}$ over the time $t$. 
 
 
+\begin{equation}
+\label{eq:standard_likelihood_definintion}
+    P(L=l)=\int_{0}^{\infty} P(T=t) P(L=l | T=t) \ dt
+\end{equation}
+
+\subsubsection{The Simple Pulse Model}\label{The Simple Pulse Model}
+
+In the simple pulse model the probability of admixture over time $t$ is given by:
+
+\begin{equation}
+\label{eq:RV_simple_pulse}
+  P(T)=\left\{
+  \begin{array}{@{}ll@{}}
+    1, & \text{if}\ T=t_{admix} \\
+    0, & \text{otherwise}
+  \end{array}\right.
+\end{equation} 
+
+Therefore,
+
+\begin{equation}
+\begin{split}
+\label{eq:Likelihood_function_simple_pulse}
+    P(L=l) &=  1  P(L=l | T=t) \\
+    &= 1 te^{-tl}
+\end{split}
+\end{equation}
+
+The expected segment length under a simple pulse model is given by,
+
+\begin{equation}
+\label{eq:Expected_l_simple_pulse}
+    \mathbb{E}[l]=\frac{1}{t}
+\end{equation}
+
+Note that this definition of the segment length distribution is independent from the migration rate $m$ at $t_{admix}$. Hence, the model does not consider the (higher) probability of admixture segments recombining with each other when the migration rate is high. This can be done following Gravel et al. 2012 \citep{gravel_population_2012}. For Neandertal admixture where $m$, the admixture fraction, is typically low, the exponential assumption is satisfied \citep{liang_lengths_2014}.
+
+\subsubsection{The Extended Pulse Model}\label{The Extended Pulse Model}
+
+The extended pulse model as a generalization of the simple pulse model describes multi-generation admixture, where the random variable $T$ follows a continuous mixture distribution $\mathcal{D}_{T}$ instead of just being one value. Specifically that it follows a Gamma distribution with parameters $\Gamma(k,\frac{t_m}{k})$, hence
+
+\begin{equation}
+\label{eq:RV_extended_pulse}
+  P(T)=\left\{
+  \begin{array}{@{}ll@{}}
+    \Gamma(k,\frac{t_m}{k}), & \text{if}\ T=t_{admix}\ \text{and}\ k\ \geq 1\\
+    0, & \text{otherwise}
+  \end{array}\right.
+\end{equation} 
+
+with,
+
+\begin{equation}
+\begin{split}
+\label{eq:RV_extended_pulse_properties}
+\mathbb{E}[t]&=t_{m} \\
+Var[t]&=\frac{t_{m}^2}{k} = \bigg(\frac{t_d}{4} \bigg)^2  \\
+\Gamma(k,\frac{t_m}{k})&= \frac{1}{\Gamma(k)(\frac{t_m}{k})^k}t^{k-1}e^{-t\frac{k}{t_m}}
+\end{split}
+\end{equation}
+
+Where $t_{m}$ is the mean time of admixture and $Var[t]$ is defined as $(\frac{t_d}{4})^2$ with $t_{d}$ giving the admixure duration.
+To get the likelihood function for the segment length distribution $P(L)$ under a multi-generation continuous extended pulse we have to solve the following integral:
+
+\begin{equation}
+\label{eq:Likelihood_function_extended_pulse_1}
+    P(L=l) = \int_{0}^{\infty} \frac{1}{\Gamma(k)(\frac{t_m}{k})^k}t^{k-1}e^{-t\frac{k}{t_m}}\ t\ e^{-tl} \ dt 
+\end{equation}
+
+we can factor out all term not depending on $t$:
+
+\begin{equation}
+\label{eq:Likelihood_function_extended_pulse_2}
+    P(L=l) = \frac{1}{\Gamma(k)(\frac{t_m}{k})^k}\ \int_{0}^{\infty}\ t^{k-1}e^{-t\frac{k}{t_m}}\ t\ e^{-tl} \ dt 
+\end{equation}
+
+we can re-write the integral into the  form of the known integral $\int_{0}^{\infty}\ x^n e^{-\alpha x} \ dx= \frac{\Gamma{n+1}}{\alpha^{n+1}}$
+
+\begin{equation}
+\begin{split}
+\label{eq:Likelihood_function_extended_pulse_3}
+    P(L=l) &= \frac{1}{\Gamma(k)(\frac{t_m}{k})^k}\ \int_{0}^{\infty}\ t^{k}e^{-(l+\frac{k}{t_m})t} \ dt \\ 
+    P(L=l) &= \frac{1}{\Gamma(k)(\frac{t_m}{k})^k}\ \frac{\Gamma(k+1)}{l+\frac{k}{t_m})^{k+1}} 
+\end{split}
+\end{equation}
+
+since $\frac{\Gamma(k+1)}{\Gamma(k)} =k$ we can re-write the likelihood to:
+
+\begin{equation}
+\begin{split}
+\label{eq:Likelihood_function_extended_pulse_final}
+    P(L=l) &= \frac{k}{(\frac{t_m}{k})^k \ (l+\frac{k}{t_m})^{k+1}} \\
+    &= \frac{k(\frac{k}{t_m})^k} {(l+\frac{k}{t_{m}})^{k+1}}  \\
+    &= \frac{k^{k+1}} { t_{m}^k \ (l+\frac{k}{t_{m}})^{k+1}}  \\
+    P(L=l) &= t_{m} \ \Bigg( \frac{k}{t_{m}(l+\frac{k}{t_{m}})}\Bigg)^{k+1}
+\end{split}
+\end{equation}
+
+The result of equation \ref{eq:Likelihood_function_simple_pulse_4} is a density function known as $Lomax$ or $Pareto-II$-distribution. Hence, we can define the likelihood function for a Gamma distributed extended admixture pulse as being Lomax distributed with parameters $L(k+1,\frac{k}{t_{m}})$, where $k$ can be interpreted as a measure of the duration of the interbreeding.
+
+with,
+
+\begin{equation}
+\label{eq:Expected_l_extended_pulse}
+\mathbb{E}[l] = \frac{1}{t_{m}}
+\end{equation}
+
+So the expected segment length distribution for the mean time of admixture between the simple and extended pulse is equal (Eq. \ref{eq:Expected_l_simple_pulse} and  \ref{eq:Expected_l_extended_pulse}). Moreover, as $k$ approaches infinity, we recover the (nested) simple pulse model.
+
+\subsubsection{Simulating the extended pulse}\label{Simulating the expanded pulse}
+
+For our coalescent simulations we used the extended pulse model with $t_m$ as the mean admixture time and $t_d$ as its duration. If $t_d$ is set to 1 (corresponding to a value of k=2250000 since, $k=\frac{t_m^2}{(t_d/4)^2}$) gives the simple pulse model. To obtain the migration rate over time $t$ we simply scaled the Gamma density by the total migration rate (here 0.03). 
 
 \subsubsection{Recombination map}\label{recombination map}
 
@@ -259,6 +377,8 @@ generations before the Africans and non-Africans. We simulated an additional adm
 
 \subsection{Admixture time estimates}\label{admixture time estimates}
 
+For our estimates we do not infer the segments length directly, rather using the decay of admixture-induced LD. This is straight forward, since the formulas given in \ref{eq:Likelihood_function_simple_pulse} and \ref{eq:Likelihood_function_extended_pulse_final} can be easily adapted by considering $P(D=d)$ at a given distance $d$ in Morgan instead of the length $l$. Therefore, we calculated the LD between Neandertal informative sides a given distance $d$ apart from each other.
+
 \subsubsection{Ascertainment scheme}\label{asceteinment scheme}
 
 For the ALD method, SNPs need to be ascertained to enrich for
@@ -277,27 +397,26 @@ The pairwise weighted LD between the ascertained SNPs a certain genetic
 distance \(d\) apart was calculated using ALDER
 \citep{loh_inferring_2013}. A minimal genetic distance \(d_0\) between
 SNPs was set either to 0.02 cM and 0.05 cM. This minimal distance cutoff
-removes extremely short-range LD, which might be due to incomplete lineage sorting (ILS). To obtain the mean time estimates
-the data is fitted with an Exponential distribution (one generation pulse model) shown in equation
-\ref{eq:5}, using a non-linear least-square optimization algorithm
-implemented in R \citep{R_Core_Team_2019}. Where \emph{A} is the
+removes extremely short-range LD, which might be due to incomplete lineage sorting (ILS). As a result of using cutoffs we used the the complement cumulative distribution of the likelihood functions given in \ref{eq:Likelihood_function_simple_pulse} and \ref{eq:Likelihood_function_extended_pulse_final} describing $P(D \geq d_0)$ (Eq. \ref{eq:simple_pulse_ccdf} and \ref{eq:extended_pulse_ccdf}). Here \emph{A} is the
 intercept, $t_m$ the mean time since the admixture event in generations,
 \emph{d} the genetic distance in cM and \emph{c} is a constant modeling
-background LD. The model was fitted following Moorjani et al 2016
-\citep{moorjani_genetic_2016}. The duration of continuous admixture is
-modeled using the Lomax fit shown in Eq. \ref{eq:6}. We used the
-notation from Kozubowski et al. 2008 \citep{Kozubowski_Testing_2008}. Setting $\frac{1}{\theta} = \frac{t_m}{k}$.
-The starting value of $t_m$  is taken from the Exponential fit.
+background LD. The simple pulse model was fitted following Moorjani et al 2016
+\citep{moorjani_genetic_2016}. The extended pulse model is
+modeled using the Lomax. We used the
+notation from Kozubowski et al. 2008 \citep{Kozubowski_Testing_2008}. Setting $\frac{1}{\theta} = \frac{t_m}{k}$. We fitted the distribution to the data using a non-linear least-square optimization algorithm
+implemented in R \citep{R_Core_Team_2019}.
+
+
 
 
 \begin{equation}
-\label{eq:5}
+\label{eq:simple_pulse_ccdf}
 ALD \sim\ A\,e^{-t_m \:d}+c
 \end{equation}
 
 \begin{equation}
-\label{eq:6}
-ALD \sim\ A\,\left( \frac{1}{1 + \frac{1}{k}t_m \:d}\right) ^k+c
+\label{eq:extended_pulse_ccdf}
+ALD \sim\ A\,\left( \frac{1}{1 + \frac{k}{tm} \:d}\right) ^k+c
 \end{equation}
 
 
@@ -343,13 +462,12 @@ We used coalescent simulations of Neandertal admixture into non-African humans t
 
 
 To assess the effect of estimating admixture time assuming a one-generation pulse when the real gene flow is actually continuous over multiple generations,
-we compared the mean average deviation from the true mean time of admixture for simulations under a one-generation pulse with the one of multi-generation continuous gene flow with the same mean time.
+we compared the mean average deviation from the true mean time of admixture for simulations under a simple pulse with the one an extended pulse with the same mean time.
 The total amount of gene flow \(m\) from Neandertals into non-Africans
 in the two models is equal. 
 The shape and scale parameter of the Gamma distribution modeling the migration rate are chosen such
 that the resulting weighted LD decay curves as functions of genetic
-distance share the same mean for a pulse (Eq. \ref{eq:1}) and a
-continuous admixture (Eq. \ref{eq:3}). We used the LES ascertainment scheme and a minimal distance between SNPs of 0.05 cM. 
+distance share the same mean for both admixture models. We used the LES ascertainment scheme and a minimal distance between SNPs of 0.05 cM. 
 
 First, we evaluate the effect of the admixture time on the accuracy of both a single pulse and an extended pulse model. The mean admixture times ranges
 from 250 generations ago to 2000 generations ago.  The duration
