radiocarbon delation paper included

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1647,3 +1647,24 @@ A ∼180,000-year-old fossil from Israel provides evidence for early forays of H
 	file = {Full Text:/home/leonardo_iasi/Zotero/storage/GDVGF65T/Carpenter et al. - 2017 - Stan A Probabilistic Programming Language.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/3AH88TSU/v076i01.html:text/html}
 }
 
+
+@article{bard_extended_2020,
+	title = {Extended dilation of the radiocarbon time scale between 40,000 and 48,000 y {BP} and the overlap between {Neanderthals} and {Homo} sapiens},
+	volume = {117},
+	copyright = {Copyright © 2020 the Author(s). Published by PNAS.. https://creativecommons.org/licenses/by-nc-nd/4.0/This open access article is distributed under Creative Commons Attribution-NonCommercial-NoDerivatives License 4.0 (CC BY-NC-ND).},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/117/35/21005},
+	doi = {10.1073/pnas.2012307117},
+	abstract = {The new radiocarbon calibration curve (IntCal20) allows us to calculate the gradient of the relationship between 14C age and calendar age over the past 55 millennia before the present (55 ka BP). The new gradient curve exhibits a prolonged and prominent maximum between 48 and 40 ka BP during which the radiocarbon clock runs almost twice as fast as it should. This radiocarbon time dilation is due to the increase in the atmospheric 14C/12C ratio caused by the 14C production rise linked to the transition into the Laschamp geomagnetic excursion centered around 41 ka BP. The major maximum in the gradient from 48 to 40 ka BP is a new feature of the IntCal20 calibration curve, with far-reaching impacts for scientific communities, such as prehistory and paleoclimatology, relying on accurate ages in this time range. To illustrate, we consider the duration of the overlap between Neanderthals and Homo sapiens in Eurasia.},
+	language = {en},
+	number = {35},
+	urldate = {2020-10-29},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Bard, Edouard and Heaton, Timothy J. and Talamo, Sahra and Kromer, Bernd and Reimer, Ron W. and Reimer, Paula J.},
+	month = sep,
+	year = {2020},
+	pmid = {32817536},
+	keywords = {geochronology, Neanderthal, paleomagnetism, radiocarbon},
+	pages = {21005--21007},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/SGZ8ALN6/Bard et al. - 2020 - Extended dilation of the radiocarbon time scale be.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/Z3QNA4UW/21005.html:text/html}
+}
