--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -109,54 +109,72 @@ Anthropology, MPI EVA), Benjamin Marco Peter (MPI EVA,
 
 \subsection{(Archaic) Interbreeding, genomic consequences and why is it interesting}\label{(Archaic) Interbreeding, genomic consequences and why is it interesting}
 
-A major insight from the sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} was that modern humans outside of Africa were in contact, and interbred with these archaic hominins \citep{vernot_resurrecting_2014,fu_genome_2014,fu_early_2015,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. There are two major lines of evidence: First, the Neandertal-genomes are genome-wide more similar to non-Africans than Africans \cite{green_draft_2010, meyer_high-coverage_2012}, a shift than can be explained by 2-4\% of admixture \cite{green_draft_2010, prufer_complete_2013}, and East Asians and Papuans are more similar to Denisovans \citep{meyer_high-coverage_2012}. Second, long fragments up to several hundred kb in length that are heterozygous for archaic ancestry have been directly identified using several different methods \citep{sankararaman_date_2012, sankararaman_genomic_2014, sankararaman_combined_2016, vernot_resurrecting_2014, vernot_excavating_2016, skov_detecting_2018, skov_nature_2020}. 
+The sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} revealed that modern humans outside of Africa interacted, and admixed with these archaic hominins \citep{vernot_resurrecting_2014,fu_genome_2014,fu_early_2015,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. There are two major lines of evidence: First, Neandertals are genome-wide more similar to non-Africans than to Africans \citep{green_draft_2010, meyer_high-coverage_2012}. This shift can be explained by 2-4\% of admixture from Neandertals into non Africans \citep{green_draft_2010, prufer_complete_2013}. Similarly, East Asians and Papuans are more similar to Denisovans \citep{meyer_high-coverage_2012} than other human groups, which is likely due to gene flow from Denisovans. 
 
-These \emph{admixture segments} are introduced as full chromosomes in individuals with an archaic and modern human parent. If this individual has offspring in a largely modern human population, meiotic recombination progressively breaks these divergent chromosomes down, whose size decrease with time \citep{falush_inference_2003, liang_lengths_2014, gravel_population_2012}. Correspondingly, early modern humans such as the 45,000 year old Ust'Ishim individual have much longer admixture segments than present-day people \citep{fu_genome_2014}. Assuming that recombination events are independent from each other, the expected length of these admixture segments is roughly inversely proportional to the number of generations since gene flow happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to infer the time of an
-admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014,pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}. Here, we primarily focus of the overlap of Neandertals and modern humans in Eurasia, and the timing of the resulting gene flow. According to the out-of-Africa model, the potential period of contact starts wit the earliest modern humans outside Africa, and ends with the disappearance of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested to be between 37 kya (radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017}) and 39 kya (radiocarbon dates of Neandertal sites across Europe \citep{higham_timing_2014}). This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years, although direct evidence of modern humans and Neandertals in the same geographical location at the same time is much spottier; in Europe, for example Neandertals and modern humans likely overlapped only for less than 10,000 years \citep{bard_extended_2020}. Detailed genetic dating of when Neandertals and modern human admixture started and ended could thus make the dating of these events more precise.
+In addition, all non-Africans carry genomic segments that are very similar to the sequenced archaic genomes. As these putative \emph{admixture segments} are up to several hundred kilobases (kb) in length, they are unlikely to predate the split of modern humans from Neandertals and Denisovans. Rather, they entered the modern human populations later through gene flow \citep{sankararaman_date_2012, sankararaman_genomic_2014, sankararaman_combined_2016, vernot_resurrecting_2014, vernot_excavating_2016, skov_detecting_2018, skov_nature_2020}. 
+
+Conceptually, these admixture segments arise through recombination: The offsprings of an archaic and modern human parent will have full chromosomes of either ancestry. If this individual has offspring in a largely modern human population, meiotic recombination progressively breaks the archaic chromosome down into smaller and smaller segments, whose size decrease with time \citep{falush_inference_2003, liang_lengths_2014, gravel_population_2012}. Correspondingly, early modern humans such as the 45,000 year old \textit{Ust'Ishim} individual have much longer admixture segments than present-day people \citep{fu_genome_2014}. Assuming that recombination events are independent from each other, the expected length of these admixture segments is roughly inversely proportional to the number of generations since gene flow happened. Hence, using this ``recombination clock'', the length distribution of introgressed chromosomal segments can be used to infer the time of an
+admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014,pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}.
+
+Here, we primarily focus on the overlap of Neandertals and modern humans in Eurasia, and the timing of the resulting gene flow. As no Neandertals have been found in Africa, the potential period of contact starts with the Out-Of-Africa event, whereas the latest gene flow would be the disappearance of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested to be around 37 kya (radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017}) and 39 kya (radiocarbon dates of Neandertal sites across Europe \citep{higham_timing_2014}). This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. However, direct evidence of modern humans and Neandertals in the same geographical location at the same time is much spottier; in Europe, for example Neandertals and modern humans likely overlapped only for less than 10,000 years \citep{bard_extended_2020}. Detailed genetic dating of when Neandertals and modern human admixture started and ended could thus make the dating of these events more precise.
 
 \subsection{Admixture models}\label{Admixture models}
-The accuracy and information content of admixture date estimates depend on the model used, and the assumptions made in its construction. The most widely used admixture model is the Isolation-Migration model (IM), which models the divergence of two populations from a common ancestor, while allowing for migration during the divergence  \citep{nielsen_distinguishing_2001,hey_multilocus_2004}. However, the gene flow in the IM model has no time component, as migration rates are assumed to be constant from the split time to the present, thus the IM model cannot be used to date secondary contact. Dates of Admixture events can be estimated by modeling the admixture segment length distribution. For this purpose, most models assume that admixture segments are rare and inbreeding is not significant, such that admixture segments are unlikely to recombine with each other \citep{pool_inference_2009,liang_lengths_2014}. The segments act neutral \citep{shchur_distribution_2019} and the recombination clock is constant over time and populations \citep{gravel_population_2012}. In addition, it is generally assumed that the admixture happens over a very short time period, in a single \textit{admixture pulse} \citep{moorjani_history_2011}, usually modelled as a single generation of interbreeding.
+
+ Dates of Admixture events can be estimated by modeling the admixture segment length distribution. The simplest models assume that admixture segments are rare and inbreeding is not significant, such that admixture segments are unlikely to recombine with each other \citep{pool_inference_2009,liang_lengths_2014}. Further assumptions are that the segments act neutrally \citep{shchur_distribution_2019} and the recombination clock is constant over time and populations \citep{gravel_population_2012}. In addition, it is generally assumed that the admixture happens over a very short time period, in a single \textit{admixture pulse} \citep{moorjani_history_2011}, usually modelled as a single generation of interbreeding.
 
 
 \subsection{The two approaches and their application to find archaic admixture dates}\label{the-two-approaches-and-their-application-to-find-archaic-admixture-dates}
+The first step in dating admixture events from genetic data is therefore estimating the length distribution of admixture segments.  There are two main approaches for this; a first sets of methods starts with identifying all admixture segments over a certain length, and then use the length distribution of these segments for inference. Alternatively, the length distribution can also be estimated from patterns of linkage along a chromosome directly, without explicitly inferring the genomic location of these segments (\citep{chimusa_dating_2018}) (Figure \ref{fig:fig1} B).
 
-The first step in dating admixture events from genetic data is therefore estimating the length distribution of admixture segments.  There are two main approaches for this; a first approach is to use patterns of linkage along a chromosome to estimate the length distribution, without explicitly inferring the genomic location of these segments. In contrast, a second set of methods first aims to identify all admixture segments over a certain length, and then use these segments for inference. 
-(\citep{chimusa_dating_2018}) (Figure \ref{fig:fig1} B).
+ In the first set of approaches, the identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. These approaches are most useful for recent admixture estimated on high-quality data, as uncertainty in the segment identification is not easily fed forward into the timing inference \citep{hellenthal_genetic_2014}.
 
-The first approach uses the admixture-induced linkage disequilibrium (ALD) decay. Variants on introgressed archaic segments are expected to be in high linkage disequilibrium to each other at the time of admixture \citep{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}. The extent of linkage between introgressed variants decreases over generations. Hence, in case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances
-\citep{patterson_methods_2004} and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from the ancestral population as well as LD caused by bottlenecks and genetic drift after the split of the populations \citep{moorjani_history_2011,sankararaman_date_2012}. For ancient admixture events however, ALD is quite similar to the genomic background \citep{sankararaman_date_2012}. To circumvent this issue for dating the Neandertal-human admixture time, an ascertainment scheme was used to calculate LD only for markers that are nearly differentially fixed between the two taxa. In this case, the presence of apparent Neandertal alleles in close-range LD is a signature of a locally introgressed locus
-\citep{sankararaman_date_2012}. Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameters are informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. 
+Thus, methods using admixture-induced linkage disequilibrium (ALD) are more widely used \citep{moorjani_history_2011,sankararaman_date_2012,sankararaman_combined_2016}. As admixture introduces entire chromosomes, variants that result from the differences between the parental chromosomes are all in linkage disequilibrium (LD) \citep{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}. As recombination decreases the size of admixture segments over time, the linkage decreases correspondingly \citep{patterson_methods_2004}. 
 
-Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to be  between 37,000--86,000 ya (years ago) \citep{sankararaman_date_2012}. Later, this date was refined to 40,510--54,454 ya (95\% CI) using a different ascertainment scheme combined with a different genetic map \citep{moorjani_genetic_2016}. A date was also obtained from an ancient genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the ancient individual, by the decay of pairwise covariance between
-introgressed SNPs, to the specimens radiocarbon date \citep{fu_genome_2014}.
+In case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from an ancestral population, or LD caused by bottlenecks and genetic drift after the split of the parental populations \citep{moorjani_history_2011,sankararaman_date_2012}. For ancient admixture events however, ALD is quite similar to the genomic background \citep{sankararaman_date_2012}. To partially circumvent this issue for dating the Neandertal-human admixture time, variants are ascertained such that only  markers that are (nearly) differentially fixed between the two groups are used 
+\citep{sankararaman_date_2012}. 
 
-Using the second set of approaches, it was found that the amount of Neandertal ancestry is higher in present-day East-Asians compared to Europeans. A second admixture event private to East-Asians around the same time as the interbreeding event between Neandertals and all non-Africans is suggested to explain the higher amount of ancestry \citep{kim_selection_2015,vernot_complex_2015}. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential distribution.
-
-The identification of long admixture segments from a genome of an early modern human found in Romania with a recent Neandertal ancestor not more than 200 years ago, hints to a more recent interbreeding event around 37 - 42 kya \citep{fu_early_2015}.
+Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameter is informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. 
 
 
-The Denisovan modern human admixture time point was estimated to lie in the interval between 44,000--54,000 ya using the ALD
-approach on modern day genomes \citep{sankararaman_combined_2016}. 
-Direct inference of archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}. 
-Comparing the mean length of the formerly known and newly identified Denisovan segments did, however, not reveal significant differences, suggesting a lack of power to distinguish the
-two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovans, one in line with previous estimates at 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}. Together, these findings indicate that there were multiple interbreeding events over time between modern human and Archaic populations.
+
+\subsection{What is known about admixture}
+
+Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to be  between 37--86 kya \citep{sankararaman_date_2012}. Later, this date was refined to 40,510--54,454 ya (95\% CI) using a different ascertainment scheme combined with a different genetic map \citep{moorjani_genetic_2016}. A date of 50 -- 60 kya was obtained from the analysis of \textit{Ust-Ishim}, an early modern human from Siberia dated to 45,000 years ago \citep{fu_genome_2014}.
+
+Using inferred segments, it was found that the amount of Neandertal ancestry is higher in present-day East-Asians compared to Europeans. A second admixture event private to East-Asians around the same time as the interbreeding event between Neandertals and all non-Africans is suggested to explain the higher amount of ancestry \citep{kim_selection_2015,vernot_complex_2015}.
+
+
+
+An example of an additional Neandertal gene flow private to a local population is the identification of admixture segments spanning several million bp in \textit{Oase 1}, the genome of an early modern human from Romania. He had a recent Neandertal ancestor less then 200 years before he lived (~37–42 kya by direct radiocarbon dating), later than the age of the \textit{Ust'Ishim} and \textit{Kostenki 14} early modern humans which are already admixed with Neadertals \citep{fu_early_2015}.
+
+
+The admixture time between Denisovans and the ancestors of Oceanians is estimated to have occurred at a similar time point as the Neandertal admixture, and has been estimated to  lie between 44 -- 54 kya using the ALD
+approach on modern day Oceanian genomes \citep{sankararaman_combined_2016}. 
+
+Direct inference of archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome than previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}. 
+
+Comparing the mean length of the formerly known and newly identified Denisovan segments did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovans, one in line with previous estimates at 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}. Together, these findings indicate that there were multiple interbreeding events over time between modern human and Archaic populations.
+
+
 
 
 \subsection{Why can't we us the pulse model}\label{Why can't we us the pulse model}
 
-While convenient for inference, one cannot use the admixture pulse model to distinguish an extend period of admixture from an admixture pulse \citep{pickrell_toward_2014}. Here, we are chiefly interested in the duration of the interbreeding between Neandertals and modern humans, especially in the start and end point.  Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated. Therefore, we introduce the \textit{extended admixture pulse} model, allowing for multigeneration continuous admixture (Figure \ref{fig:fig1} A). 
+Most of these inferences were done using an admixture pulse model, which assumes that all gene flow occurred in a single generation. This model is mathematically convenient, but biologically unrealistic. As both Neandertals and humans were, and continue to be spread out over continental scales, gene flow likely persisted over hundreds or thousands of years. In particular, the start and end times of admixture are much easier to interpret than the mean time; as the start time must postdate the out-of-Africa migration, and gene flow ended with or before Neandertals went extinct . Here, we present an \emph{extended admixture pulse} model that adds one additional parameter to estimate  the duration of gene flow, while retaining much of the mathematical simplicity present in the pulse model (Figure \ref{fig:fig1} A). 
+
 
 \subsection{Previous attempts of a general admixture model and ours}\label{Previous attempts of a general admixture model and ours}
 
-The extended pulse model is a generalization of the simple admixture pulse model. The simplest generalization of this model is to assume two or more discrete pulses. In such a case,  each segment can be thought of having entered in one of the pulses, and the resulting admixture tracts will be a discrete mixture of the constituent distributions \citep{pickrell_ancient_2014}, weighted by the relative migration rates. Zhou et al. 2017 \citep{zhou_modeling_2017} showed that this model, in principle, can be used for continuous mixtures as well, using a polynomial function as a mixture density. However, they found that even for relatively short admixture events, the large number of parameters led to an underestimate of admixture duration \citep{zhou_inference_2017}, and the beginning and end of admixture were not well inferred
+The extended pulse model is a generalization of the simple admixture pulse model. One alternative to the extended pulse model is to use a discrete mixture of multiple admixture pulses. This is especially useful if the events are very distinct in time, e.g. if one event is only a few generations back, and the other pulse occurred hundreds of generations ago \cite{fu_genome_2014,slon_genome_2018}. In this case, the admixture segments will be either very long if they are recent, or much shorter if they are older. It is also very useful if the two admixing sources are divergence from one another or the admixture proportions are of different magnitude. However, this model requires at least three parameters (two admixture times and relative admixture strength), and thus is more complex than the extended pulse model. 
+
+Zhou et al. 2017 \citep{zhou_modeling_2017} showed that this model, in principle, can be used for continuous mixtures as well, using a polynomial function as a mixture density. However, they found that even for relatively short admixture events, the large number of parameters led to an underestimate of admixture duration \citep{zhou_inference_2017}, and the beginning and end of admixture were not well inferred
 \citep{zhou_modeling_2017,zhou_inference_2017}. 
 
 Here we use a simpler model of continuous admixture with just two parameters, and one less than the two-pulse model of Pickrell et al. 2014 \citep{pickrell_ancient_2014}. One parameter reflects the mean admixture time, and the other the duration of the admixture event; letting this parameter go to zero thus recovers the (nested) simple pulse model. 
 This model is particularly simple if we assume that migration rate over time is Gamma distributed, in which case the distribution of admixture segment lengths has a closed form (Figure \ref{fig:fig1} C & D).
 
-Nevertheless, this is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008}. Thus, we have to carefully evaluate potential sources of biases known from previous studies, namely the demography of the admixed population, the accuracy of the recombination map and the ascertainment scheme \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}.
+Nevertheless, this is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008,hellenthal_genetic_2014}. Thus, we have to carefully evaluate potential sources of biases known from previous studies, namely the demography of the admixed population, the accuracy of the recombination map and the ascertainment scheme \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}.
 We compare the extended pulse with the simple pulse model, to examine the implications of the one-generation assumption in relation to the aforementioned potential biases. We test when the simple pulse model can be contrasted for the more general model of an extended admixture pulse.
-
 
 
 \subsection{What we want to do}\label{what-we-want-to-do}
@@ -179,7 +197,7 @@ decay under the extended pulse model.}
 \end{figure}
 
 \section{Methods}\label{methods}
-
+In this section, we present formal definitions of the admixture models used. 
 We conducted simulations to assess the effect of continuous
 admixture compared to a pulse under ideal circumstances. 
 We also evaluated the impact of different recombination and demographic scenarios and the effect of different analysis parameters for estimates under an instantaneous pulse model.
