Slon et al 2018 and other included

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1668,3 +1668,69 @@ A ∼180,000-year-old fossil from Israel provides evidence for early forays of H
 	pages = {21005--21007},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/SGZ8ALN6/Bard et al. - 2020 - Extended dilation of the radiocarbon time scale be.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/Z3QNA4UW/21005.html:text/html}
 }
+
+
+@article{seguin-orlando_genomic_2014,
+	title = {Genomic structure in {Europeans} dating back at least 36,200 years},
+	volume = {346},
+	copyright = {Copyright © 2014, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/346/6213/1113},
+	doi = {10.1126/science.aaa0114},
+	abstract = {The origin of contemporary Europeans remains contentious. We obtained a genome sequence from Kostenki 14 in European Russia dating from 38,700 to 36,200 years ago, one of the oldest fossils of anatomically modern humans from Europe. We find that Kostenki 14 shares a close ancestry with the 24,000-year-old Mal’ta boy from central Siberia, European Mesolithic hunter-gatherers, some contemporary western Siberians, and many Europeans, but not eastern Asians. Additionally, the Kostenki 14 genome shows evidence of shared ancestry with a population basal to all Eurasians that also relates to later European Neolithic farmers. We find that Kostenki 14 contains more Neandertal DNA that is contained in longer tracts than present Europeans. Our findings reveal the timing of divergence of western Eurasians and East Asians to be more than 36,200 years ago and that European genomic structure today dates back to the Upper Paleolithic and derives from a metapopulation that at times stretched from Europe to central Asia.
+Secrets of human ancestor evolution revealed
+Studies of ancient humans help us understand the movement and evolution of modern populations of humans. Seguin-Orlando et al. present the genome of an ancient individual, K14, from northern Russia who lived over 36,000 years ago. K14 is more similar to west Eurasians and Europeans than to east Asians, indicating that these populations had already diverged.
+Science, this issue p. 1113
+An ancient human genome illuminates human demography in Eurasia and Europe.
+An ancient human genome illuminates human demography in Eurasia and Europe.},
+	language = {en},
+	number = {6213},
+	urldate = {2020-12-02},
+	journal = {Science},
+	author = {Seguin-Orlando, Andaine and Korneliussen, Thorfinn S. and Sikora, Martin and Malaspinas, Anna-Sapfo and Manica, Andrea and Moltke, Ida and Albrechtsen, Anders and Ko, Amy and Margaryan, Ashot and Moiseyev, Vyacheslav and Goebel, Ted and Westaway, Michael and Lambert, David and Khartanovich, Valeri and Wall, Jeffrey D. and Nigst, Philip R. and Foley, Robert A. and Lahr, Marta Mirazon and Nielsen, Rasmus and Orlando, Ludovic and Willerslev, Eske},
+	month = nov,
+	year = {2014},
+	pmid = {25378462},
+	pages = {1113--1118},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/VCS4F2SK/Seguin-Orlando et al. - 2014 - Genomic structure in Europeans dating back at leas.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/C88AZAQQ/1113.html:text/html}
+}
+
+
+@article{ralph_geography_2013,
+	title = {The {Geography} of {Recent} {Genetic} {Ancestry} across {Europe}},
+	volume = {11},
+	issn = {1545-7885},
+	url = {https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001555},
+	doi = {10.1371/journal.pbio.1001555},
+	abstract = {A genomic survey of recent genealogical relatedness reveals the close ties of kinship and the impact of events across the past 3,000 years of European history.},
+	language = {en},
+	number = {5},
+	urldate = {2020-12-02},
+	journal = {PLOS Biology},
+	author = {Ralph, Peter and Coop, Graham},
+	month = may,
+	year = {2013},
+	keywords = {DNA recombination, Europe, Genetics, Genomics, Geography, Italian people, Italy, Population genetics},
+	pages = {e1001555},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/3RR3Q6GW/Ralph and Coop - 2013 - The Geography of Recent Genetic Ancestry across Eu.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/NCJ2PGJB/article.html:text/html}
+}
+
+
+@article{slon_genome_2018,
+	title = {The genome of the offspring of a {Neanderthal} mother and a {Denisovan} father},
+	volume = {561},
+	copyright = {2018 Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-018-0455-x},
+	doi = {10.1038/s41586-018-0455-x},
+	abstract = {Neanderthals and Denisovans are extinct groups of hominins that separated from each other more than 390,000 years ago1,2. Here we present the genome of ‘Denisova 11’, a bone fragment from Denisova Cave (Russia)3 and show that it comes from an individual who had a Neanderthal mother and a Denisovan father. The father, whose genome bears traces of Neanderthal ancestry, came from a population related to a later Denisovan found in the cave4–6. The mother came from a population more closely related to Neanderthals who lived later in Europe2,7 than to an earlier Neanderthal found in Denisova Cave8, suggesting that migrations of Neanderthals between eastern and western Eurasia occurred sometime after 120,000 years ago. The finding of a first-generation Neanderthal–Denisovan offspring among the small number of archaic specimens sequenced to date suggests that mixing between Late Pleistocene hominin groups was common when they met.},
+	language = {en},
+	number = {7721},
+	urldate = {2020-12-03},
+	journal = {Nature},
+	author = {Slon, Viviane and Mafessoni, Fabrizio and Vernot, Benjamin and de Filippo, Cesare and Grote, Steffi and Viola, Bence and Hajdinjak, Mateja and Peyrégne, Stéphane and Nagel, Sarah and Brown, Samantha and Douka, Katerina and Higham, Tom and Kozlikin, Maxim B. and Shunkov, Michael V. and Derevianko, Anatoly P. and Kelso, Janet and Meyer, Matthias and Prüfer, Kay and Pääbo, Svante},
+	month = sep,
+	year = {2018},
+	pages = {113--116},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/D9SYHMYM/Slon et al. - 2018 - The genome of the offspring of a Neanderthal mothe.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/FX55JKGJ/s41586-018-0455-x.html:text/html}
+}
